# TentakelsAttacking2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TentakelsAttacking2.sln  vcpkg.json
.github/workflows/: main.yml
TentakelsAttacking2/: Main.cpp  TODO.txt  TentakelsAttacking2.vcxproj  TentakelsAttacking2.vcxproj.filters  count.py  count_config.py
TentakelsAttacking2/Assets/: config.tac
TentakelsAttacking2/Assets/Languages/: english.tal  german.tal
TentakelsAttacking2/Assets/Text/: title.txt
TentakelsAttacking2/Constants/private/: CConstants.cpp  CGameEvents.cpp  CWindow.cpp  ConfigIO.cpp
TentakelsAttacking2/Constants/public/: CConstants.h  CConstants.hpp  CFight.hpp  CFiles.hpp  CFleet.hpp  CGameEvents.h  CGlobal.hpp  CLogicAlias.hpp  CPlanet.hpp  CPlayer.hpp  CSound.hpp  CTextProcecing.hpp  CTextProcessing.hpp  CUIAlias.hpp  CWindow.h  CWorld.hpp  ConfigIO.h
TentakelsAttacking2/Events/public/: EventListener.h  EventListener.hpp  EventManager.h  EventManager.hpp  Events.h  GenerelEvents.hpp  MainEvent.h  MainEvent.hpp  UIEvents.h  UIEvents.hpp
TentakelsAttacking2/Game/private/: Fleet.cpp  Galaxy.cpp  GalaxyManager.cpp  GameManager.cpp  GroupTarget.cpp  Planet.cpp  Player.cpp  SpaceObject.cpp  TargetPoint.cpp
TentakelsAttacking2/Game/public/: CopyGalaxyType.hpp  Fleet.h  FleetResult.hpp  Galaxy.h  GalaxyManager.h  GameManager.h  GroupTarget.h  LogicUpdate.hpp  Planet.h  Player.h  PlayerType.h  PlayerType.hpp  SpaceObject.h  TargetPoint.h
TentakelsAttacking2/Helper/private/: AssetManager.cpp  GenerelHelper.cpp  HAssetManager.cpp  HColors.cpp  HConfigEnum.cpp  HErrorLog.cpp  HFightResult.cpp  HFocusEvents.cpp  HGalaxy.cpp  HGeneral.cpp  HInput.cpp  HLaguageManager.cpp  HMergeResult.cpp  HPlayerCollection.cpp  HPlayerData.cpp  HPrint.cpp  HRandom.cpp  HSoundManager.cpp  HTextProcessing.cpp  HVector2Operator.cpp  Random.cpp  SoundManager.cpp  TextProcessing.cpp
TentakelsAttacking2/Helper/public/: AssetManager.h  AssetType.h  AssetType.hpp  GameEventTypes.hpp  GenerelHelper.h  HAssetManager.h  HAssetType.hpp  HColors.h  HConcepts.hpp  HConfigEnum.h  HErrorLog.h  HFightResult.h  HFleetResult.hpp  HFocusEvents.h  HGalaxy.h  HGameEventTypes.hpp  HGeneral.h  HInput.h  HLaguageManager.h  HLogicAlias.hpp  HMergeResult.h  HPlayerCollection.h  HPlayerData.h  HPlayerData.hpp  HPrint.h  HRandom.h  HResolution.hpp  HSoundManager.h  HSoundType.hpp  HTextProcecingConstant.hpp  HTextProcessing.h  HUIAlias.hpp  HVector2Operator.h  LayeredVector.h  LayeredVector.hpp  Random.h  SoundManager.h  TextProcessing.h  Vec2.h  Vec2.hpp
TentakelsAttacking2/Saves/: config.tac  testCondig.tac
TentakelsAttacking2/UI/private/: Alignment.cpp  Allignment.cpp  AssetManager.cpp  Button.cpp  ColorPicker.cpp  ColorPickerCell.cpp  Focus.cpp  Focusable.cpp  HoverRender.cpp  PopUpManager.cpp  SceneManager.cpp  Slider.cpp  SliderButton.cpp  SoundManager.cpp  UIManager.cpp
TentakelsAttacking2/UI/public/: Alignment.h  Allignment.h  AssetManager.h  AssetType.h  Button.h  ColorPicker.h  ColorPickerCell.h  Focus.h  Focusable.h  HoverRender.h  PopUpManager.h  SceneManager.h  Slider.h  SliderButton.h  SoundManager.h  SoundType.h  UIElement.h  UIElement.hpp  UIManager.h
TentakelsAttacking2/_private/: AppContext.cpp  Main.cpp
TentakelsAttacking2/_public/: AppContext.h  CustomRaylib.h
enc_temp_folder/adbb60e64b498e7c4d1279612c192f56/: MainScene.cpp
enc_temp_folder/d75d45a095bcdaa829d8e15bcc09ca2/: GameManager.cpp
(+220 files in other folders)
